# privacyshield

./: README.md
PrivacyShield/: LICENSE  README.md  gradle.properties  settings.gradle.kts
PrivacyShield/app/: build.gradle.kts  proguard-rules.pro
PrivacyShield/app/src/main/: AndroidManifest.xml
PrivacyShield/app/src/main/cpp/: CMakeLists.txt  llama_bridge.cpp  llama_bridge.h
PrivacyShield/app/src/main/cpp/llama_stub/: llama_bridge_stub.cpp
PrivacyShield/app/src/main/java/com/privacyshield/: MainActivity.kt  PrivacyShieldApp.kt
PrivacyShield/app/src/main/java/com/privacyshield/blur/: BlurEngine.kt  BlurMode.kt
PrivacyShield/app/src/main/java/com/privacyshield/camera/: CameraManager.kt  FrameAnalyzer.kt
PrivacyShield/app/src/main/java/com/privacyshield/detection/: DetectionResult.kt  IdCardDetector.kt  OcrEngine.kt  SensitiveFieldClassifier.kt
PrivacyShield/app/src/main/java/com/privacyshield/export/: SafeShareManager.kt
PrivacyShield/app/src/main/java/com/privacyshield/llm/: ConversationManager.kt  LlamaEngine.kt  LlamaJNI.kt
PrivacyShield/app/src/main/java/com/privacyshield/navigation/: AppNavGraph.kt
PrivacyShield/app/src/main/java/com/privacyshield/security/: MemoryGuard.kt
PrivacyShield/app/src/main/java/com/privacyshield/ui/camera/: CameraScreen.kt  CameraViewModel.kt
PrivacyShield/app/src/main/java/com/privacyshield/ui/chat/: ChatScreen.kt  ChatViewModel.kt
PrivacyShield/app/src/main/java/com/privacyshield/ui/settings/: SettingsScreen.kt
PrivacyShield/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
PrivacyShield/app/src/main/res/values/: strings.xml  themes.xml
PrivacyShield/app/src/main/res/xml/: data_extraction_rules.xml  file_paths.xml
(+1 files in other folders)
